--- a/package.json
+++ b/package.json
@@ -77,6 +77,10 @@
     "example:structured": "npm run build && node dist/examples/structured_output.js"
   },
   "peerDependencies": {
+    "@langchain/anthropic": "^0.3.26",
+    "@langchain/core": "^0.3.72",
+    "@langchain/openai": "^0.6.9",
+    "langchain": "^0.3.27",
     "langfuse": "^3.32.0",
     "langfuse-langchain": "^3.38.4"
   },
@@ -90,16 +94,12 @@
   },
   "dependencies": {
     "@dmitryrechkin/json-schema-to-zod": "^1.0.1",
-    "@langchain/anthropic": "^0.3.14",
-    "@langchain/core": "0.3.71",
-    "@langchain/openai": "^0.5.15",
     "@modelcontextprotocol/sdk": "1.12.1",
     "@scarf/scarf": "^1.4.0",
     "ai": "^4.3.19",
     "dotenv": "^16.5.0",
     "eventsource": "^3.0.6",
     "fastembed": "^1.14.4",
-    "langchain": "^0.3.27",
     "lodash-es": "^4.17.21",
     "posthog-node": "^5.1.1",
     "uuid": "^11.1.0",
